@@ -1,13 +1,27 @@
 library(tidyverse)
 
-sims <- read_csv("03_analysis/05_simulations/simulation_output.csv")
+# sims <- read_csv("03_analysis/05_simulations/compare_paternity_accuracy.csv",
+#                  col_types = 'fccnnnnc')
+sims <- read_csv(
+  "03_analysis/05_simulations/simulation_output.csv",
+  col_types = 'fccnnnnn'
+)
 
-sim_plot <- sims %>% 
+mean(sims$false_negative > sims$sibs_covs)
+
+mean( exp(sims$true_negative) >0.5)
+
+
+
+
+
+# sim_plot <- 
+sims %>% 
   group_by(iter) %>% 
   summarise(
-    Paternity = mean(exp(paternity) > 0.99),
-    Sibships  = mean(exp(sibships) > 0.99),
-    `Sibships +\ndispersal` = mean(exp(sibs_covs) > 0.99)
+    Paternity = mean(exp(paternity) > 0.95),
+    Sibships  = mean(exp(sibships) > 0.95),
+    `Sibships +\ndispersal` = mean(exp(sibs_covs) > 0.95)
   ) %>% 
   pivot_longer(Paternity: `Sibships +\ndispersal` ) %>% 
   mutate(
